<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.responsiblecooking.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.responsiblecooking.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/search_fragment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.responsiblecooking.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.responsiblecooking.ui.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/recipes_fragment" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.responsiblecooking.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/login_fragment" />
</navigation>