<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_recipes"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_recipes"
        app:showAsAction="ifRoom" />
    <!-- Login
    <item
        android:id="@+id/navigation_login"
        android:enabled="false"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_login"
        app:showAsAction="ifRoom" />
        -->
</menu>
