<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_fragment_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.responsiblecooking.ui.profile.ProfileFragment">

    <!-- PROFILE IMAGE -->
    <ImageView
        android:id="@+id/profile_imageView"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        app:srcCompat="@drawable/ic_anon_user_48dp" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="275dp"
        android:layout_height="42dp"
        android:layout_below="@+id/profile_imageView"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:hint="@string/text_input_username"
        android:text="@string/username" />

    <TextView
        android:id="@+id/editViewEmail"
        android:layout_width="261dp"
        android:layout_height="46dp"
        android:layout_below="@+id/textViewUsername"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:gravity="center"
        android:hint="@string/text_view_email"
        android:text="@string/email" />

    <TextView
        android:id="@+id/textViewNbRecipeAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="60dp"
        android:layout_toStartOf="@+id/textViewNbRecipeAddText"
        android:gravity="center"
        android:text="Recipes add" />

    <TextView
        android:id="@+id/textViewNbRecipeAddText"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="Favorite recipes" />

    <TextView
        android:id="@+id/textViewNb"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_above="@+id/textViewNbRecipeAdd"
        android:layout_below="@+id/editViewEmail"
        android:layout_alignParentStart="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="30dp"
        android:layout_toStartOf="@+id/textView6"
        android:text="NB"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_above="@+id/textViewNbRecipeAddText"
        android:layout_below="@+id/editViewEmail"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="NB"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>